fix: create 6.0.7 #4 #5